Heading updated with correct font and text alignment

--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,4 @@
-
-@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Space+Grotesk:wght@500&display=swap');
 
 :root{
 
@@ -28,6 +27,10 @@ html, body {
   margin: 0;
   padding: 0;
   overflow-x: hidden;
+}
+
+h1, h2 {
+  font-family: 'Roboto', sans-serif;
 }
 
 main{
@@ -120,7 +123,7 @@ main{
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	/* background-color: antiquewhite; */
+	/* background-color: rgb(237, 230, 235); */
 	
 	animation: fadeInUp 1s ease-out forwards;
     animation-delay: 0s, 1s;
@@ -241,29 +244,34 @@ main{
   }
   
   .profile_details h1 {
-	font-size: 25px;
+	font-size: 2rem;
+	font-weight: 700;
 	color: var(--Very-dark-violet);
 	margin-bottom: 1rem;
-	margin-left: 16dvw;
+	text-align: center;
+	/* margin-left: 16dvw; */
   }
  
   .profile_details h2 {
-	font-size: 20px;
+	font-size: 1.5rem;
+	font-weight: 500;
+		text-align: center;
+
 	color: var(--Very-dark-violet);
 	margin-bottom: 1rem;
-	margin-left: 8dvw;
+	/* margin-left: 8dvw; */
   }
  
   
   .profile_details p {
-	font-size: 16px;
+	font-size: 1.2rem;
 	color: var(--Dark-grayish-violet);
 	margin-top: 2rem;
 	margin-left: 8dvw;
   }
   
   .profile_details h3 {
-	font-size: 18px;
+	/* font-size: 18px; */
 	margin-bottom: 1rem;
 	color: var(--Very-dark-violet);
 	margin-left: 12dvw;
